# homeduino.py

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
homeduino/: __init__.py  __main__.py  homeduino.py
tests/: __init__.py  settings.json  test_Homeduino.py  test_HomeduinoCommands.py  test_HomeduinoProtocol.py  test_homeduino.py  test_homeduino_commands.py  test_homeduino_protocol.py
