[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeduino"
version = "0.0.5.2"
license = {text = "Apache-2.0"}
authors = [
    { name="Rogier van Staveren" }
]
description = "Homeduino library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial-asyncio==0.6",
    "rfcontrolpy>=0.0.2"
]

[project.urls]
"Homepage" = "https://github.com/rrooggiieerr/homeduino.py"
"Bug Tracker" = "https://github.com/rrooggiieerr/homeduino.py/issues"

[tool.black]
target-version = ["py39", "py310"]
exclude = 'generated'

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
