[build-system]
requires = ["hatchling>=1.24", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "homeduino/_version.py"

[tool.hatch.version]
source = "vcs"

[project]
name = "homeduino"
dynamic = ["version"]
license = {text = "GPLv3"}
authors = [
    { name="Rogier van Staveren", email="rogier@batoid.com" }
]
description = "Homeduino library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pyserial-asyncio-fast>=0.12",
    "rfcontrolpy==0.0.8"
]

[project.urls]
Homepage = "https://github.com/rrooggiieerr/homeduino.py"
Issues = "https://github.com/rrooggiieerr/homeduino.py/issues"

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
skip = "homeduino/_version.py"

[tool.black]
exclude = "homeduino/_version.py"

[tool.pylint]
ignore = "_version.py"
recursive = "y"

[tool.mypy]
python_version = "3.11"
mypy_path = "homeduino"

[[tool.mypy.overrides]]
module = ["*._version", "serial.*", "serial_asyncio.*", "rfcontrol.*"]
ignore_missing_imports = true
